[package]
name = "rive-rs"
description = "Rive runtime bindings"
version = "0.2.0"
edition = "2021"
authors = ["Dragoș Tiselice <dragos@rive.app>"]
homepage = "https://rive.app/"
repository = "https://github.com/rive-app/rive-rs"
documentation = "https://docs.rs/rive-rs"
keywords = ["rive", "runtime", "animation", "state-machine"]
categories = ["multimedia"]
license = "MIT"
readme = "../README.md"

[features]
default = ["text"]
text = []
vello = ["dep:bytemuck", "dep:image", "dep:smallvec", "dep:vello"]

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
walkdir = "2.4.0"

[dependencies]
bitflags = "2.4.0"
bytemuck = { version = "1.14.0", optional = true }
image = { version = "0.24.6", optional = true }
smallvec = { version = "1.8.0", optional = true }
vello = { version = "0.1.0", optional = true }
