[package]
name = "rive-rs"
description = "Rive runtime bindings"
version = "0.1.0"
edition = "2021"
authors = ["Dragoș Tiselice <dragos@rive.app>"]
homepage = "https://rive.app/"
repository = "https://github.com/rive-app/rive-rs"
documentation = "https://docs.rs/rive-rs"
keywords = ["rive", "runtime", "animation", "state-machine"]
categories = ["multimedia"]
license = "MIT"
readme = "../README.md"

[features]
default = ["text"]
text = []
layout = []
vello = ["dep:bytemuck", "dep:image", "dep:vello"]

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
walkdir = "2.5.0"

[dependencies]
bitflags = "2.9.1"
bytemuck = { version = "1.23.0", optional = true }
image = { version = "0.25.6", optional = true }
vello = { workspace = true, optional = true }
