[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pollster = "0.3.0"
rive-rs = { path = "../../rive-rs", features = ["vello"] }
vello = { workspace = true }
winit = "0.30.10"
anyhow = "1.0.98"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
